--- a/index.html
+++ b/index.html
@@ -23,29 +23,31 @@
 </head>
 <body>
     <header>
-        <h1>Emmy Tang</h1>
+        <h1><a href="index.html">Emmy Tang</a></h1>
     </header>
    
     <nav id="mainnav">
         <ul>
-            <li><a href="#">about</a></li>
-            <li><a href="#">contact</a></li>
+            <li><a href="about.html">about</a></li>
             <li>work
                 <ul class="submenu">
-                    <li>UI/UX</li>
-                    <li>Graphic Design</li>
-                    <li>illustration</li>
-                    <li>Fashion</li>
+                    <li><a href="uiux.html">UI/UX Design</a></li>
+                    <li><a href="graphic.html">Graphic Design</a></li>
+                    <!-- <li><a href="#">Personal</a></li> -->
                 </ul>
             </li>
         </ul>
     </nav>
     <section id="homehero">
         <p id="intro">Hi, glad you could make it!</p> 
-        <p id="intro2">My name is Emmy. I'm a Graphic and UI Designer by day and illustrator, fashion designer by night.</p>
+        <p id="intro2">My name is Emmy. I'm a Graphic and UI Designer.</p>
     </section>
     <h2>Explore</h2>
     <section id="gridhome">
+        <article id="ucdga" href="#">
+            <h3>UC Davis Global Affairs</h3> 
+            <img src="images/graphic/ucdga/summerabroad2.png" width="300px">
+        </article>
         <article id="madlib" href="#">
             <h3>Purrfect Paws Adoption Center</h3> 
             <img src="images/uiux/purrfect paws/finalmadlibshome.png" width="300px">
@@ -66,14 +68,41 @@
             <h3>Stay</h3> 
             <img src="images/uiux/stay/home.png" width="300px">
         </article>
-        <article id="pubvollector" href="#">
+        <article id="pubcollector" href="#">
             <h3>Pub Collector</h3> 
             <img src="images/uiux/pubcollector/pirmary.png" width="300px">
         </article>
+        <article id="hibana" href="#">
+            <h3>Hibana Brand Guidelines</h3> 
+            <img src="images/graphic/hibana/Hibana Brand Guide.png" width="300px">
+        </article>
+        <article id="typebook" href="#">
+            <h3>The Typographic Universe</h3> 
+            <img src="images/graphic/book/thumbnail.png" width="300px">
+        </article>
+        <article id="period" href="#">
+            <h3>Sustainable Periods</h3> 
+            <img src="images/graphic/periodvideo/period.png" width="300px">
+        </article>
+        <article id="hierarchy" href="#">
+            <h3>Hierarchy Exploration</h3> 
+            <img src="images/graphic/hierarchy-exploration/5.png" width="300px">
+        </article>
+        <article id="energy" href="#">
+            <h3>Energy Drink motion graphic</h3> 
+            <img src="images/graphic/energydrink/thumbnail.png" width="300px">
+        </article>
+        <article id="Joanna" href="#">
+            <h3>Joanna Type Abstraction</h3> 
+            <img src="images/graphic/joanna/thumbnail.png" width="300px">
+        </article>
     </section>
+    <footer>
+        <div>
+        <p>Email me at <a href="mailto:&#048;&#050;&#101;&#109;&#109;&#121;&#116;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">02emmyt@gmail.com</a></p>
+        <p>Designed by Emmy Tang</p>
+        </div>
+    </footer>
 </body>
-<footer>
-    <p>Email me at <a href="mailto:&#048;&#050;&#101;&#109;&#109;&#121;&#116;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">02emmyt@gmail.com</a></p>
-    <p>Designed by Emmy Tang</p>
-</footer>
+
 </html>
