--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <!-- Meta tag for mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <!-- Add link to any google fonts used here -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gaegu&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <!-- gsap library -->
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-     <!-- AOS js -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    
+ 
    <!-- My Styles -->
     <link href="styles.css" rel="stylesheet"> <!-- type animation -->
     <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
@@ -29,7 +28,7 @@
     <nav id="mainnav">
         <ul>
             <li><a href="about.html">about</a></li>
-            <li>work
+            <li><a href="index.html">work</a>
                 <ul class="submenu">
                     <li><a href="uiux.html">UI/UX Design</a></li>
                     <li><a href="graphic.html">Graphic Design</a></li>
@@ -44,57 +43,60 @@
     </section>
     <h2>Explore</h2>
     <section id="gridhome">
-        <article id="ucdga" href="#">
-            <h3>UC Davis Global Affairs</h3> 
-            <img src="images/graphic/ucdga/summerabroad2.png" width="300px">
-        </article>
-        <article id="madlib" href="#">
+        <a href="graphic/ucdga.html">
+            <article id="ucdga" href="#">
+                <h3>UC Davis Global Affairs</h3> 
+                <img src="images/graphic/ucdga/summerabroad2.png" width="300" height="195" alt="thumbnail">
+            </article>
+        </a>
+        <a href="uiux/madlibs.html"><article id="madlib" >
             <h3>Purrfect Paws Adoption Center</h3> 
-            <img src="images/uiux/purrfect paws/finalmadlibshome.png" width="300px">
+            <img src="images/uiux/purrfect paws/finalmadlibshome.png" width="300px" height="195" alt="thumbnail">
         </article>
+        </a>
         <article id="Trees" href="#">
             <h3>Trees.app</h3> 
-            <img src="images/uiux/trees/onboardingmock.png" width="300px">
+            <img src="images/uiux/trees/onboardingmock.png" width="300px" height="195">
         </article>
         <article id="gameon" href="#">
             <h3>Can You leave Debt-Free?</h3> 
-            <img src="images/uiux/gameon/gameon.png" width="300px">
+            <img src="images/uiux/gameon/gameon.png" width="300px" height="195">
         </article>
         <article id="sweettreat" href="#">
             <h3>You Deserve a Sweet Treat</h3> 
-            <img src="images/uiux/sweettreat/sweettreats.png" width="300px">
+            <img src="images/uiux/sweettreat/sweettreats.png" width="300px" height="195">
         </article>
         <article id="Stay" href="#">
             <h3>Stay</h3> 
-            <img src="images/uiux/stay/home.png" width="300px">
+            <img src="images/uiux/stay/home.png" width="300px" height="195">
         </article>
         <article id="pubcollector" href="#">
             <h3>Pub Collector</h3> 
-            <img src="images/uiux/pubcollector/pirmary.png" width="300px">
+            <img src="images/uiux/pubcollector/pirmary.png" width="300px" height="195">
         </article>
         <article id="hibana" href="#">
             <h3>Hibana Brand Guidelines</h3> 
-            <img src="images/graphic/hibana/Hibana Brand Guide.png" width="300px">
+            <img src="images/graphic/hibana/Hibana Brand Guide.png" width="300px" height="195">
         </article>
         <article id="typebook" href="#">
             <h3>The Typographic Universe</h3> 
-            <img src="images/graphic/book/thumbnail.png" width="300px">
+            <img src="images/graphic/book/thumbnail.png" width="300px" height="195">
         </article>
         <article id="period" href="#">
             <h3>Sustainable Periods</h3> 
-            <img src="images/graphic/periodvideo/period.png" width="300px">
+            <img src="images/graphic/periodvideo/period.png" width="300px" height="195">
         </article>
         <article id="hierarchy" href="#">
             <h3>Hierarchy Exploration</h3> 
-            <img src="images/graphic/hierarchy-exploration/5.png" width="300px">
+            <img src="images/graphic/hierarchy-exploration/5.png" width="300px" height="195">
         </article>
         <article id="energy" href="#">
             <h3>Energy Drink motion graphic</h3> 
-            <img src="images/graphic/energydrink/thumbnail.png" width="300px">
+            <img src="images/graphic/energydrink/thumbnail.png" width="300px" height="195">
         </article>
         <article id="Joanna" href="#">
             <h3>Joanna Type Abstraction</h3> 
-            <img src="images/graphic/joanna/thumbnail.png" width="300px">
+            <img src="images/graphic/joanna/thumbnail.png" width="300px" height="195">
         </article>
     </section>
     <footer>
