--- a/uiux.html
+++ b/uiux.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Emmy Tang's Portfolio</title>
+    <title>Emmy Tang - UI/UX Design</title>
     <!-- Normalize CSS for browser compatability -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <!-- Meta tag for mobile support -->
@@ -11,10 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gaegu&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <!-- gsap library -->
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-     <!-- AOS js -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
    <!-- My Styles -->
     <link href="styles.css" rel="stylesheet"> <!-- type animation -->
     <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
@@ -30,7 +27,7 @@
         <ul>
             <li><a href="about.html">about</a></li>
             
-            <li>work
+            <li><a href="index.html">work</a>
                 <ul class="submenu">
                     <li><a href="uiux.html">UI/UX Design</a></li>
                     <li><a href="graphic.html">Graphic Design</a></li>
@@ -41,10 +38,11 @@
     </nav>
     <h2>UI/UX </h2>
     <section>
-        <article id="madlib" href="#">
+        <a href="uiux/madlibs.html"><article id="madlib" >
             <h3>Purrfect Paws Adoption Center</h3> 
-            <img src="images/uiux/purrfect paws/finalmadlibshome.png" width="300px">
+            <img src="images/uiux/purrfect paws/finalmadlibshome.png" width="300px" height="195" alt="thumbnail">
         </article>
+        </a>
         <article id="Trees" href="#">
             <h3>Trees.app</h3> 
             <img src="images/uiux/trees/onboardingmock.png" width="300px">
