--- a/uiux/madlibs.html
+++ b/uiux/madlibs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Emmy Tang- About</title>
+    <title>Emmy Tang - Purrfect Paws Madlibs</title>
     <!-- Normalize CSS for browser compatability -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <!-- Meta tag for mobile support -->
@@ -11,47 +11,41 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gaegu&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-   
+  
    <!-- My Styles -->
-    <link href="styles.css" rel="stylesheet"> <!-- type animation -->
+    <link href="../styles.css" rel="stylesheet"> <!-- type animation -->
     <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
     <!-- My Script -->
-    <script src="script.js" defer></script>
+    <script src="../script.js" defer></script>
 </head>
 <body>
     <header>
-        <h1><a href="index.html">Emmy Tang</a></h1>
+        <h1><a href="../index.html">Emmy Tang</a></h1>
     </header>
    
     <nav id="mainnav">
         <ul>
-            <li><a href="about.html">about</a></li>
-            <li><a href="index.html">work</a>
+            <li><a href="../about.html">about</a></li>
+            <li>work
                 <ul class="submenu">
-                    <li><a href="uiux.html">UI/UX Design</a></li>
-                    <li><a href="graphic.html">Graphic Design</a></li>
+                    <li><a href="../uiux.html">UI/UX Design</a></li>
+                    <li><a href="../graphic.html">Graphic Design</a></li>
                     <!-- <li><a href="">Personal</a></li> -->
                 </ul>
             </li>
         </ul>
     </nav>
-    <h2>About</h2>
+    <h2>Purrfect Paws Adoption Center Madlibs</h2>
+    <main>
+        <div></div>
+        <p> Point and click game-inspired madlibs. For sound, <a class="extlink" href="https://tangemmy.github.io/DES157a/finalmadlibs/index.html">Play Here</a>!</p>
+        <video width="100%" controls>
+            <source src="../images/uiux/purrfect paws/madlibs.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+     </video>
+        <!-- <img src="../images/uiux/purrfect paws/progress1.png" width="350"> -->
+    </main>
     
-        <h3 id="ntmy">Nice to meet you!</h3>
-
-       <div id="aboutdesc"> 
-        <p id="bio">
-            Thank you for visiting my work. <br>
-
-            I'm a designer. But what does that mean? <br><br>
-
-            I have experience in graphics, UI/UX, front-end development, motion graphics, CAD, illustration, and fashion design. While these fields may seem wildly different, I've realized one thing remains consistent that makes me confident in each endeavor: the design process and principles.
-            <br><br>
-            To me, design is about problem-solving and using whatever tools and skills it takes to solve those problems. It's about constantly striving for improvement and innovation.
-            </p>
-            <img src="images/sewingpfp.JPG" alt="pfp" width="200px">   
-     
-    </div>
     <footer>
         <div>
         <p>Email me at <a href="mailto:&#048;&#050;&#101;&#109;&#109;&#121;&#116;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">02emmyt@gmail.com</a></p>
